content: finalise the slides

--- a/biblio.bib
+++ b/biblio.bib
@@ -10,3 +10,14 @@
   title = {Reward is enough},
   journal = {Artificial Intelligence}
 }
+
+@article{degrave2022magnetic,
+  title={Magnetic control of tokamak plasmas through deep reinforcement learning},
+  author={Degrave, Jonas and Felici, Federico and Buchli, Jonas and Neunert, Michael and Tracey, Brendan and Carpanese, Francesco and Ewalds, Timo and Hafner, Roland and Abdolmaleki, Abbas and de Las Casas, Diego and others},
+  journal={Nature},
+  volume={602},
+  number={7897},
+  pages={414--419},
+  year={2022},
+  publisher={Nature Publishing Group}
+}
